docs: align README with the actual build configuration
The README claimed a second JDK (17+) is mandatory because of sbt 2.0.6
while project/build.properties pins sbt 1.9.9, which starts on JDK 11.
Corrected the setup list and the IntelliJ sbt-JVM note, and fixed the
same stale sbt-2-requires-JDK-17 wording in a build.sbt comment. The
build itself is untouched. Logged as entry 2 in docs/BUGFIX_LOG.md.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>