@@ -27,8 +27,10 @@ generated dataset identical on every machine.
 Install these yourself, they are not part of the repository:
 
 1. **JDK 11** — the project SDK, as required by the course.
-2. **A JDK 17 or above** — sbt 2.0.6 refuses to start on anything older.
-   It only runs the build tool; the project itself still targets JDK 11.
+2. **No second JDK is needed** — sbt 1.9.9, the version declared in
+   `project/build.properties`, starts fine on JDK 11. If sbt runs on a newer
+   JDK (17 or above), `build.sbt` already passes the `--add-opens` flags the
+   forked Spark JVMs need there.
 3. **IntelliJ IDEA** with the Scala plugin.
 4. **Windows only**: `winutils.exe` and `HADOOP_HOME`, see the section below.
 
@@ -38,8 +40,8 @@ dependency tree, and ScalaTest. Expect a few hundred megabytes and several
 minutes on the first import, then nothing.
 
 In IntelliJ, set the project SDK to the JDK 11 under
-`File -> Project Structure -> Project`, and the sbt JVM to the JDK 17 under
-`Settings -> Build Tools -> sbt -> JVM`.
+`File -> Project Structure -> Project`; the sbt JVM under
+`Settings -> Build Tools -> sbt -> JVM` can stay on JDK 11 or any newer JDK.
 
 The dataset is versioned in `data/`, so there is nothing to generate: the
 pipeline reads the very same 15,000 transactions on every machine. Deleting
